<resources>
    <string name="app_name">Asteroid Radar</string>

    <string name="next_week_asteroids">View week asteroids</string>
    <string name="today_asteroids">View today asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>
    <string name="close_approach_data_title" translatable="false">Close approach date</string>
    <string name="absolute_magnitude_title" translatable="false">Absolute magnitude</string>
    <string name="estimated_diameter_title" translatable="false">Estimated diameter</string>
    <string name="relative_velocity_title" translatable="false">Relative velocity</string>
    <string name="distance_from_earth_title" translatable="false">Distance from earth</string>
    <string name="astronomical_unit_format" translatable="false">%s au</string>
    <string name="km_unit_format" translatable="false">%s km</string>
    <string name="km_s_unit_format" translatable="false">%s km/s</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="astronomica_unit_explanation" translatable="false">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button" translatable="false">Astronomical unit definition</string>
    <string name="potentially_hazardous_asteroid_image" translatable="false">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image" translatable="false">Not hazardous asteroid image</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet" translatable="false">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format" translatable="false">NASA\'s picture of day: %s</string>
</resources>