<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
<variable
    name="asteroid"
    type="com.esraa.egfwd.asteroidradar.data.local.DBAsteroid" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_background">

            <ImageView
                android:id="@+id/asteroid_status_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:asteroidStatusImage="@{asteroid.potentiallyHazardous}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/asteroid_safe" />

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/basic_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/asteroid_status_image">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.Title"
                            android:text="@string/close_approach_data_title" />

                        <TextView
                            android:id="@+id/close_approach_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.SubTitle"
                            android:layout_marginTop="@dimen/small_margin"
                            android:text="@{asteroid.closeApproachDate}"
                            tools:text="2020-02-01" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/basic_margin"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/TextAppearance.Title"
                                android:text="@string/absolute_magnitude_title" />

                            <TextView
                                android:id="@+id/absolute_magnitude"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/TextAppearance.SubTitle"
                                android:layout_marginTop="@dimen/small_margin"
                                app:astronomicalUnitText="@{asteroid.absoluteMagnitude}"
                                tools:text="25.126 au" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/help_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/basic_margin"
                            app:srcCompat="@drawable/ic_help_circle"
                            android:contentDescription="@string/astronomical_unit_explanation_button"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.Title"
                        android:layout_marginTop="@dimen/basic_margin"
                        android:text="@string/estimated_diameter_title"/>

                    <TextView
                        android:id="@+id/estimated_diameter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.SubTitle"
                        android:layout_marginTop="@dimen/small_margin"
                       app:kmUnitText="@{asteroid.estimatedDiameter}"
                        tools:text="0.82 km" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.Title"
                        android:layout_marginTop="@dimen/basic_margin"
                        android:text="@string/relative_velocity_title" />

                    <TextView
                        android:id="@+id/relative_velocity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.SubTitle"
                        android:layout_marginTop="@dimen/small_margin"
                       app:velocityText="@{asteroid.relativeVelocity}"
                        tools:text="11.9 km/s" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/basic_margin"
                        style="@style/TextAppearance.Title"
                        android:text="@string/distance_from_earth_title" />

                    <TextView
                        android:id="@+id/distance_from_earth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.SubTitle"
                        android:layout_marginTop="@dimen/small_margin"
                        app:astronomicalUnitText="@{asteroid.missDistance}"
                        tools:text="0.0924 au" />

                </LinearLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>